--- a/QuanLyCongTacTroGiangKhoaCNTT.csproj
+++ b/QuanLyCongTacTroGiangKhoaCNTT.csproj
@@ -50,6 +50,12 @@
     <Reference Include="DocumentFormat.OpenXml, Version=2.16.0.0, Culture=neutral, PublicKeyToken=8fb06cb64d019a17, processorArchitecture=MSIL">
       <HintPath>packages\DocumentFormat.OpenXml.2.16.0\lib\net46\DocumentFormat.OpenXml.dll</HintPath>
     </Reference>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="ExcelNumberFormat, Version=1.1.0.0, Culture=neutral, PublicKeyToken=23c6f5d73be07eca, processorArchitecture=MSIL">
       <HintPath>packages\ExcelNumberFormat.1.1.0\lib\net20\ExcelNumberFormat.dll</HintPath>
     </Reference>
@@ -121,6 +127,7 @@
       <HintPath>packages\System.Runtime.CompilerServices.Unsafe.4.7.0\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Security.Cryptography.Algorithms, Version=4.2.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>packages\System.Security.Cryptography.Algorithms.4.3.0\lib\net463\System.Security.Cryptography.Algorithms.dll</HintPath>
       <Private>True</Private>
@@ -244,6 +251,7 @@
     <Compile Include="Areas\admin\adminAreaRegistration.cs" />
     <Compile Include="Areas\admin\Controllers\admindashboardController.cs" />
     <Compile Include="Areas\studentaffairs\Controllers\studentaffairsdashboardController.cs" />
+    <Compile Include="Areas\studentaffairs\Controllers\studentaffairssemesterandmajorController.cs" />
     <Compile Include="Areas\studentaffairs\Controllers\studentaffairstimetableController.cs" />
     <Compile Include="Areas\studentaffairs\studentaffairsAreaRegistration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
@@ -252,11 +260,37 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Middlewall\Loginverification.cs" />
+    <Compile Include="Models\HocKy.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Model1.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model1.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Model1.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Model1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model1.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Nganh.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ThoiKhoaBieu.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="ActiveItemMenu\admin\admindashboard\index.js" />
+    <Content Include="ActiveItemMenu\studentaffairs\studentaffairssemesterandmajor\nganh.js" />
+    <Content Include="ActiveItemMenu\studentaffairs\studentaffairssemesterandmajor\hocky.js" />
     <Content Include="ActiveItemMenu\studentaffairs\studentaffairstimetable\import.js" />
     <Content Include="ActiveItemMenu\studentaffairs\studentaffairstimetable\index.js" />
     <Content Include="ActiveItemMenu\studentaffairs\studentaffairsdashboard\index.js" />
@@ -338,6 +372,8 @@
     <Content Include="Content\assets\libs\quill\dist\quill.snow.css" />
     <Content Include="Content\assets\libs\simplebar\dist\simplebar.min.css" />
     <Content Include="Content\assets\libs\simplebar\dist\simplebar.min.js" />
+    <Content Include="Content\assets\libs\Sweetalert2\css\sweetalert2.min.css" />
+    <Content Include="Content\assets\libs\Sweetalert2\js\sweetalert2.all.min.js" />
     <Content Include="Content\assets\libs\timetable\timetable-load.min.js" />
     <Content Include="Content\assets\libs\timetable\timetable.min.css" />
     <Content Include="Content\assets\libs\tiny-slider\dist\min\tiny-slider.js" />
@@ -350,6 +386,16 @@
     <Content Include="Content\img\user-default.png" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="Models\Model1.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Model1.edmx</DependentUpon>
+      <LastGenOutput>Model1.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\Model1.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Model1.edmx</DependentUpon>
+      <LastGenOutput>Model1.cs</LastGenOutput>
+    </Content>
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
@@ -368,6 +414,17 @@
     <Content Include="Areas\studentaffairs\Views\studentaffairstimetable\Index.cshtml" />
     <Content Include="Areas\studentaffairs\Views\studentaffairstimetable\Import.cshtml" />
     <Content Include="Areas\studentaffairs\Views\studentaffairsdashboard\Index.cshtml" />
+    <Content Include="Areas\studentaffairs\Views\studentaffairssemesterandmajor\Semester.cshtml" />
+    <EntityDeploy Include="Models\Model1.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>Model1.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\Model1.edmx.diagram">
+      <DependentUpon>Model1.edmx</DependentUpon>
+    </Content>
+    <Content Include="Areas\studentaffairs\Views\studentaffairssemesterandmajor\_EditSemester.cshtml" />
+    <Content Include="Areas\studentaffairs\Views\studentaffairssemesterandmajor\Major.cshtml" />
+    <Content Include="Areas\studentaffairs\Views\studentaffairssemesterandmajor\_EditMajor.cshtml" />
     <None Include="Scripts\jquery-3.7.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.0.js" />
     <Content Include="Scripts\jquery-3.7.0.min.js" />
@@ -379,6 +436,13 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Validation\studentaffairs\major\add.js" />
+    <Content Include="Validation\studentaffairs\major\delete.js" />
+    <Content Include="Validation\studentaffairs\major\edit.js" />
+    <Content Include="Validation\studentaffairs\semester\delete.js" />
+    <Content Include="Validation\studentaffairs\semester\edit.js" />
+    <Content Include="Validation\studentaffairs\semester\add.js" />
+    <Content Include="Validation\studentaffairs\timetable\import.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -398,7 +462,6 @@
     <Folder Include="App_Data\" />
     <Folder Include="Areas\admin\Data\" />
     <Folder Include="Areas\studentaffairs\Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -410,6 +473,9 @@
     <Content Include="Scripts\bootstrap.bundle.js.map" />
     <Content Include="Scripts\jquery-3.7.0.slim.min.map" />
     <Content Include="Scripts\jquery-3.7.0.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
