--- a/Web.config
+++ b/Web.config
@@ -24,8 +24,7 @@
 	<system.web>
 		<compilation debug="true" targetFramework="4.7.2">
 			<assemblies>
-				<add assembly="netstandard, Version=2.0.0.0, Culture=neutral, 
-            PublicKeyToken=cc7b13ffcd2ddd51"/>
+				<add assembly="netstandard, Version=2.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
 			</assemblies>
 		</compilation>
 		<httpRuntime targetFramework="4.7.2" />
@@ -125,9 +124,8 @@
 		</assemblyBinding>
 	</runtime>
 	<connectionStrings>
-		<add name="Excel03ConString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source={0};Extended Properties='Excel 8.0;HDR=YES'" />
-		<add name="Excel07ConString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source={0}; Extended Properties='Excel 12.0 Xml; HDR=YES'" />
-		<add name="TrogiangvluEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=103.20.102.224,1433;initial catalog=Trogiangvlu;persist security info=True;user id=aendy;password=Aendy3010dvt.2kkk;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<add name="ExcelConString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source={0}; Extended Properties='Excel 12.0 Xml; HDR=YES'" />
+		<add name="TrogiangvluEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tuleap.vanlanguni.edu.vn,18082;initial catalog=CAP24Team02;persist security info=True;user id=CAP24Team02;password=CAP24Team02;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
 	<entityFramework>
 		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
