Add function view timetable

--- a/Web.config
+++ b/Web.config
@@ -125,7 +125,8 @@
 	</runtime>
 	<connectionStrings>
 		<add name="ExcelConString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source={0}; Extended Properties='Excel 12.0 Xml; HDR=YES'" />
-	<add name="TrogiangvluEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tuleap.vanlanguni.edu.vn,18082;initial catalog=CAP24Team02;persist security info=True;user id=CAP24Team02;password=CAP24Team02;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+		<add name="TrogiangvluEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tuleap.vanlanguni.edu.vn,18082;initial catalog=CAP24Team02;persist security info=True;user id=CAP24Team02;password=CAP24Team02;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	</connectionStrings>
 	<entityFramework>
 		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
 		<providers>
