--- a/QuanLyCongTacTroGiangKhoaCNTT.csproj
+++ b/QuanLyCongTacTroGiangKhoaCNTT.csproj
@@ -255,6 +255,7 @@
     <Compile Include="Controllers\ClassSectionController.cs" />
     <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\NotificationsController.cs" />
     <Compile Include="Controllers\TaskListController.cs" />
     <Compile Include="Controllers\TeachingAssistantController.cs" />
     <Compile Include="Controllers\TermAndMajorController.cs" />
@@ -515,6 +516,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Notifications\" />
     <Folder Include="Views\TaskList\" />
   </ItemGroup>
   <ItemGroup>
