--- a/QuanLyCongTacTroGiangKhoaCNTT.csproj
+++ b/QuanLyCongTacTroGiangKhoaCNTT.csproj
@@ -301,12 +301,16 @@
     <Compile Include="Models\ThoiKhoaBieu.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ThongBao.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="ActiveItemMenu\Dashboard\index.js" />
     <Content Include="ActiveItemMenu\ClassSection\index.js" />
+    <Content Include="ActiveItemMenu\Notifications\index.js" />
     <Content Include="ActiveItemMenu\SemesterAndMajor\hocky.js" />
     <Content Include="ActiveItemMenu\SemesterAndMajor\nganh.js" />
     <Content Include="ActiveItemMenu\TeachingAssistant\tasklist.js" />
@@ -459,9 +463,11 @@
     <Content Include="Validation\department\major\add.js" />
     <Content Include="Validation\department\major\delete.js" />
     <Content Include="Validation\department\major\edit.js" />
+    <Content Include="Validation\department\notifications\delete.js" />
     <Content Include="Validation\department\semester\add.js" />
     <Content Include="Validation\department\semester\delete.js" />
     <Content Include="Validation\department\semester\edit.js" />
+    <Content Include="Validation\department\timetable\downloadFormImport.js" />
     <Content Include="Validation\department\timetable\exportfile.js" />
     <Content Include="Validation\department\timetable\filterviewtimtable.js" />
     <Content Include="Validation\department\timetable\import.js" />
@@ -471,6 +477,7 @@
     <Content Include="Validation\department\users\edit.js" />
     <Content Include="Validation\department\users\filter.js" />
     <Content Include="Validation\department\users\load.js" />
+    <Content Include="Validation\Infomation\updateInfo.js" />
     <Content Include="Validation\student\load.js" />
     <Content Include="Validation\teacher\classsection\suggestedTA.js" />
     <Content Include="Validation\teachingassistant\load.js" />
@@ -513,10 +520,10 @@
     <Content Include="Views\TeachingAssistant\_Apply.cshtml" />
     <Content Include="Views\Shared\_TALayout.cshtml" />
     <Content Include="Views\TeachingAssistant\_TaskList.cshtml" />
+    <Content Include="Views\Notifications\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Notifications\" />
     <Folder Include="Views\TaskList\" />
   </ItemGroup>
   <ItemGroup>
