--- a/packages.config
+++ b/packages.config
@@ -4,7 +4,8 @@
   <package id="bootstrap" version="5.2.3" targetFramework="net472" />
   <package id="ClosedXML" version="0.102.3" targetFramework="net472" />
   <package id="DocumentFormat.OpenXml" version="2.16.0" targetFramework="net472" />
-  <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
+  <package id="EntityFramework" version="6.5.1" targetFramework="net472" />
+  <package id="EntityFramework.SqlServerCompact" version="6.5.1" targetFramework="net472" />
   <package id="ExcelNumberFormat" version="1.1.0" targetFramework="net472" />
   <package id="Irony.NetCore" version="1.0.11" targetFramework="net472" />
   <package id="jQuery" version="3.7.0" targetFramework="net472" />
@@ -15,6 +16,7 @@
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.5.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Logging" version="5.5.0" targetFramework="net472" />
@@ -29,16 +31,18 @@
   <package id="Microsoft.Owin.Security.Cookies" version="4.1.0" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.OpenIdConnect" version="4.1.0" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
+  <package id="Newtonsoft.Json.Bson" version="1.0.2" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="SixLabors.Fonts" version="1.0.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.5.0" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.Packaging" version="6.0.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
@@ -48,6 +52,7 @@
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net472" />
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
   <package id="XLParser" version="1.5.2" targetFramework="net472" />
 </packages>
